# CS739-Replicated-Block-Store-using-Raft

./: .gitignore  CMakeLists.txt  README  README.md  TEAM  r1.txt  readLatency.txt  serverFile.txt  setup.sh  w1.txt  writeLatency.txt
client/: client.cc
include/: blockstore.h
proto/: blockstore.proto
server/: backup.cc  server.cc
